# dev_couple_dem_cfd

./: .gitignore  Cargo.toml  README.md  VALIDATION.md
.github/workflows/: ci.yml
crates/dem_cfd/: Cargo.toml
crates/dem_cfd/src/: bed.rs  config.rs  drag.rs  lib.rs  reference.rs  routing.rs  seam.rs
crates/dem_cfd/tests/: closed_momentum.rs  routed_3x2.rs  routed_trajectory_3x2.rs
examples/adaptive_umf_strategy/: README.md  config.toml  main.rs  plot.py  sweep.py
examples/adaptive_umf_strategy/data/: references.md
examples/adaptive_umf_strategy/plots/: adaptive_umf_strategy.csv
examples/cfd_ibm_fiber/: README.md  config.toml  main.rs  plot.py
examples/fixed_bed_ergun/: README.md  config.toml  config_eps50.toml  main.rs  plot.py
examples/fluidized_bed_umf/: README.md  config.toml  main.rs  plot.py
examples/fluidized_bed_umf/data/: references.md
examples/hello_dem_cfd/: main.rs  setup.rs
examples/implicit_added_mass/: README.md  config.toml  main.rs  plot.py
examples/implicit_added_mass/plots/: trace.csv
examples/routed_dem_cfd/: config.toml  main.rs
examples/settling_sphere/: config.toml  main.rs  plot.py
validation/: manifest.toml  run.sh
